@@ -1,3 +1,7 @@
+2007-09-12  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Fixed bug 2402: RealURL+tx_realurl_advanced: xxx was not a keyword for a postVarSet
+
 2007-09-11  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Added searching for rootpage_id by domain name (taking redirects into account)
